<!--
  ~ Copyright © 2021 By Geeks Empire.
  ~
  ~ Created by Elias Fazel on 2/24/21 9:24 AM
  ~ Last modified 2/24/21 8:16 AM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<resources>

    <string name="applicationName">Aban Magazine</string>

    <string name="changeLanguageText">Change Language</string>
    <string name="signupText">Sign Up</string>
    <string name="rateText">Rate Us Five Star</string>
    <string name="shareText">Share Our Application With Your Friends</string>

    <string name="rateFiveStars">Please, Support Us By Giving 5 Stars ✨✨✨✨✨</string>

    <string name="readMore">Read More ➡</string>

    <string name="searchText">Search</string>
    <string name="searchRemoteText">Search In Fashion &amp; Style</string>
    <string name="typeToSearch">Type To Search…</string>
    <string name="onlineStoreText">Online Store</string>
    <string name="searchError">Error Occurred ⚠</string>

    <string name="categoriesText">Categories</string>
    <string name="featuredPostsText">Featured Posts</string>
    <string name="newestPostsText">Newest Posts</string>
    <string name="forYouPostsText">Recommended For You</string>
    <string name="relatedPosts">Related Posts</string>
    <string name="instagramStoriesText">Instagram Highlights Stories</string>

    <string name="productsShowcaseText">Aban\'s Special Handpicked Selection 💟</string>
    <string name="purchaseText">See Details On Amazon</string>
    <string name="purchaseTextTwoLines">See Details\nOn Amazon</string>

    <string name="noMoreContent">No More Content</string>
    <string name="turnOnText">Turn On</string>
    <string name="grantPermission">Grant</string>

    <string name="clickHere">
        <![CDATA[
            Click Here
            <br/>
            👇
        ]]>
    </string>

    <string name="showFullScreen">Show Full Screen</string>

    <string name="permissionMessage">Application Can Not Work Properly Without Permissions</string>
    <string name="noInternetConnectionText">No Internet Connection ⚠</string>

    <string name="inAppUpdateDescription">An Update Has Just Been Installed</string>
    <string name="inAppUpdateAction">
        <![CDATA[
            Complete It!
        ]]>
    </string>

    <string name="associateText">As an Amazon Associate I Earn from Qualifying Purchases.</string>

</resources>